--- a/sale_order_type/views/account_invoice_view.xml
+++ b/sale_order_type/views/account_invoice_view.xml
@@ -17,6 +17,14 @@
                             states="draft"/>
                 </div>
             </field>
+
+            <!-- Send sale_type_id to product selectors so they can customize based on it. -->
+            <xpath expr="//field[@name='invoice_line_ids']/tree/field[@name='product_id']"
+                position="attributes">
+                <attribute name="context" operation="python_dict"
+                    key="sale_type">parent.sale_type_id</attribute>
+            </xpath>
+
         </field>
     </record>
 </odoo>
