--- a/sale_order_type/views/sale_order_view.xml
+++ b/sale_order_type/views/sale_order_view.xml
@@ -14,6 +14,19 @@
                             states="draft,sent"/>
                 </div>
             </field>
+
+            <!-- Send type_id to product selectors so they can customize based on it. -->
+            <xpath expr="//field[@name='order_line']/tree/field[@name='product_id']"
+                position="attributes">
+                <attribute name="context" operation="python_dict"
+                    key="sale_type">parent.type_id</attribute>
+            </xpath>
+            <xpath expr="//field[@name='order_line']/form//field[@name='product_id']"
+                position="attributes">
+                <attribute name="context" operation="python_dict"
+                    key="sale_type">parent.type_id</attribute>
+            </xpath>
+
         </field>
     </record>
 </odoo>
