--- a/sale_order_type/views/sale_order_view.xml
+++ b/sale_order_type/views/sale_order_view.xml
@@ -1,5 +1,54 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
+
+    <!-- Inherit from the sales order search view. -->
+    <record id="sot_sale_order_search" model="ir.ui.view">
+        <field name="name">sot_sale_order_search</field>
+        <field name="model">sale.order</field>
+        <field name="inherit_id" ref="sale.view_sales_order_filter" />
+        <field name="arch" type="xml">
+
+            <field name='product_id' position="after">
+                <field name="type_id" />
+            </field>
+
+            <xpath expr="//group" position="inside">
+                <filter name="group_by_type" string="Type"
+                    context="{'group_by': 'type_id'}" />
+            </xpath>
+
+        </field>
+    </record>
+
+    <!-- Inherit from the sales order quotation list view. -->
+    <record id="sot_sale_order_quotation_list" model="ir.ui.view">
+        <field name="name">sot_sale_order_quotation_list</field>
+        <field name="model">sale.order</field>
+        <field name="inherit_id" ref="sale.view_quotation_tree" />
+        <field name="arch" type="xml">
+
+            <field name='name' position="after">
+                <field name="type_id" />
+            </field>
+
+        </field>
+    </record>
+
+    <!-- Inherit from the sales order list view. -->
+    <record id="sot_sale_order_list" model="ir.ui.view">
+        <field name="name">sot_sale_order_list</field>
+        <field name="model">sale.order</field>
+        <field name="inherit_id" ref="sale.view_order_tree" />
+        <field name="arch" type="xml">
+
+            <field name='name' position="after">
+                <field name="type_id" />
+            </field>
+
+        </field>
+    </record>
+
+    <!-- Inherit from the sales order form view. -->
     <record id="sot_view_order_form" model="ir.ui.view">
         <field name="name">sale.order.form</field>
         <field name="model">sale.order</field>
@@ -29,4 +78,5 @@
 
         </field>
     </record>
+
 </odoo>
