[ADD] add template_id & ir_actions_report_id fields to sale order type

--- a/sale_order_type/views/sale_order_type_view.xml
+++ b/sale_order_type/views/sale_order_type_view.xml
@@ -35,6 +35,12 @@
                         <page string="Rules" name="rules">
                             <field name="rule_ids" nolabel="1"/>
                         </page>
+                        <page string="Other Information" name="other">
+                            <group>
+                                <field name="mail_template_id" />
+                                <field name="ir_actions_report_id" />
+                            </group>
+                        </page>
                     </notebook>
                 </sheet>
             </form>
