[ADD] add the french translations

--- a/sale_order_type/views/sale_order_type_view.xml
+++ b/sale_order_type/views/sale_order_type_view.xml
@@ -35,7 +35,7 @@
                         <page string="Rules" name="rules">
                             <field name="rule_ids" nolabel="1"/>
                         </page>
-                        <page string="Other Information" name="other">
+                        <page string="Documents" name="documents">
                             <group>
                                 <field name="mail_template_id" />
                                 <field name="ir_actions_report_id" />
