Handle mail/document template + translations update.

--- a/sale_order_type/views/account_invoice_view.xml
+++ b/sale_order_type/views/account_invoice_view.xml
@@ -60,6 +60,15 @@
                     key="sale_type">parent.sale_type_id</attribute>
             </xpath>
 
+            <!-- Add a confirmation dialog box onto the "Send by email" buttons (there
+                are 2 of these). -->
+            <xpath expr="//button[@name='action_invoice_sent'][1]" position="attributes">
+                <attribute name="confirm">An email is about to be sent. Continue?</attribute>
+            </xpath>
+            <xpath expr="//button[@name='action_invoice_sent'][2]" position="attributes">
+                <attribute name="confirm">An email is about to be sent. Continue?</attribute>
+            </xpath>
+
         </field>
     </record>
 
