[ADD] add template_id & ir_actions_report_id fields to sale order type

--- a/sale_order_type/views/sale_order_type_view.xml
+++ b/sale_order_type/views/sale_order_type_view.xml
@@ -48,6 +48,14 @@
                     <group>
                         <field name="description" nolabel="1" />
                     </group>
+                    <notebook>
+                        <page string="Other Information" name="other">
+                            <group>
+                                <field name="mail_template_id" />
+                                <field name="ir_actions_report_id" />
+                            </group>
+                        </page>
+                    </notebook>
                 </sheet>
             </form>
         </field>
