Handle mail/document template + translations update.

--- a/sale_order_type/views/sale_order_type_view.xml
+++ b/sale_order_type/views/sale_order_type_view.xml
@@ -49,10 +49,12 @@
                         <field name="description" nolabel="1" />
                     </group>
                     <notebook>
-                        <page string="Documents" name="documents">
+                        <page string="Emails &amp; documents" name="documents">
                             <group>
                                 <field name="mail_template_id" />
                                 <field name="ir_actions_report_id" />
+                                <field name="invoice_mail_template_id" />
+                                <field name="send_invoice_mail_automatically" />
                             </group>
                         </page>
                     </notebook>
